syntax = "proto3";

package services.calendar;

import "buf/validate/validate.proto";
import "codegen/itemslen/itemslen.proto";
import "codegen/perms/perms.proto";
import "resources/calendar/access.proto";
import "resources/calendar/calendar.proto";
import "resources/common/database/database.proto";
import "resources/timestamp/timestamp.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/services/calendar;calendar";

// Calendar

message ListCalendarsRequest {
  resources.common.database.PaginationRequest pagination = 1 [(buf.validate.field).required = true];
  bool only_public = 2;
  optional resources.calendar.AccessLevel min_access_level = 3;
  optional resources.timestamp.Timestamp after = 4;
}

message ListCalendarsResponse {
  resources.common.database.PaginationResponse pagination = 1 [(buf.validate.field).required = true];
  repeated resources.calendar.Calendar calendars = 2 [(codegen.itemslen.items_len) = true];
}

message GetCalendarRequest {
  int64 calendar_id = 1;
}

message GetCalendarResponse {
  resources.calendar.Calendar calendar = 1;
}

message CreateCalendarRequest {
  resources.calendar.Calendar calendar = 1 [(buf.validate.field).required = true];
}

message CreateCalendarResponse {
  resources.calendar.Calendar calendar = 1;
}

message UpdateCalendarRequest {
  resources.calendar.Calendar calendar = 1 [(buf.validate.field).required = true];
}

message UpdateCalendarResponse {
  resources.calendar.Calendar calendar = 1;
}

message DeleteCalendarRequest {
  int64 calendar_id = 1;
}

message DeleteCalendarResponse {}

// Calendar Entries

message ListCalendarEntriesRequest {
  int32 year = 1 [(buf.validate.field).int32 = {gte: 2023}];
  int32 month = 2 [(buf.validate.field).int32 = {
    gte: 1
    lte: 12
  }];
  repeated int64 calendar_ids = 3;
  optional bool show_hidden = 4;
  optional resources.timestamp.Timestamp after = 5;
}

message ListCalendarEntriesResponse {
  repeated resources.calendar.CalendarEntry entries = 1;
}

message GetUpcomingEntriesRequest {
  int32 seconds = 1;
}

message GetUpcomingEntriesResponse {
  repeated resources.calendar.CalendarEntry entries = 1;
}

message GetCalendarEntryRequest {
  int64 entry_id = 1;
}

message GetCalendarEntryResponse {
  resources.calendar.CalendarEntry entry = 1;
}

message CreateOrUpdateCalendarEntryRequest {
  resources.calendar.CalendarEntry entry = 1 [(buf.validate.field).required = true];
  repeated int32 user_ids = 2;
}

message CreateOrUpdateCalendarEntryResponse {
  resources.calendar.CalendarEntry entry = 1;
}

message DeleteCalendarEntryRequest {
  int64 entry_id = 1;
}

message DeleteCalendarEntryResponse {}

message ShareCalendarEntryRequest {
  int64 entry_id = 1;
  repeated int32 user_ids = 2;
}

message ShareCalendarEntryResponse {}

// RSVP

message ListCalendarEntryRSVPRequest {
  resources.common.database.PaginationRequest pagination = 1 [(buf.validate.field).required = true];
  int64 entry_id = 2;
}

message ListCalendarEntryRSVPResponse {
  resources.common.database.PaginationResponse pagination = 1 [(buf.validate.field).required = true];
  repeated resources.calendar.CalendarEntryRSVP entries = 2 [(codegen.itemslen.items_len) = true];
}

message RSVPCalendarEntryRequest {
  resources.calendar.CalendarEntryRSVP entry = 1;
  bool subscribe = 2;
  optional bool remove = 3;
}

message RSVPCalendarEntryResponse {
  optional resources.calendar.CalendarEntryRSVP entry = 1;
}

// Subs

message ListSubscriptionsRequest {
  resources.common.database.PaginationRequest pagination = 1 [(buf.validate.field).required = true];
}

message ListSubscriptionsResponse {
  resources.common.database.PaginationResponse pagination = 1 [(buf.validate.field).required = true];
  repeated resources.calendar.CalendarSub subs = 2 [(codegen.itemslen.items_len) = true];
}

message SubscribeToCalendarRequest {
  resources.calendar.CalendarSub sub = 1;
  bool delete = 2;
}

message SubscribeToCalendarResponse {
  resources.calendar.CalendarSub sub = 1;
}

service CalendarService {
  rpc ListCalendars(ListCalendarsRequest) returns (ListCalendarsResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "Any"
    };
  }
  rpc GetCalendar(GetCalendarRequest) returns (GetCalendarResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "Any"
    };
  }
  rpc CreateCalendar(CreateCalendarRequest) returns (CreateCalendarResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      attrs: [
        {
          key: "Fields"
          type: ATTRIBUTE_TYPE_STRING_LIST
          valid_string_list: [
            "Job",
            "Public"
          ]
        }
      ]
    };
  }
  rpc UpdateCalendar(UpdateCalendarRequest) returns (UpdateCalendarResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "Any"
    };
  }
  rpc DeleteCalendar(DeleteCalendarRequest) returns (DeleteCalendarResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "Any"
    };
  }

  rpc ListCalendarEntries(ListCalendarEntriesRequest) returns (ListCalendarEntriesResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "Any"
    };
  }
  rpc GetUpcomingEntries(GetUpcomingEntriesRequest) returns (GetUpcomingEntriesResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "Any"
    };
  }
  rpc GetCalendarEntry(GetCalendarEntryRequest) returns (GetCalendarEntryResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "Any"
    };
  }
  rpc CreateOrUpdateCalendarEntry(CreateOrUpdateCalendarEntryRequest) returns (CreateOrUpdateCalendarEntryResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "Any"
    };
  }
  rpc DeleteCalendarEntry(DeleteCalendarEntryRequest) returns (DeleteCalendarEntryResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "Any"
    };
  }
  rpc ShareCalendarEntry(ShareCalendarEntryRequest) returns (ShareCalendarEntryResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "Any"
    };
  }

  rpc ListCalendarEntryRSVP(ListCalendarEntryRSVPRequest) returns (ListCalendarEntryRSVPResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "Any"
    };
  }
  rpc RSVPCalendarEntry(RSVPCalendarEntryRequest) returns (RSVPCalendarEntryResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "Any"
    };
  }

  rpc ListSubscriptions(ListSubscriptionsRequest) returns (ListSubscriptionsResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "Any"
    };
  }
  rpc SubscribeToCalendar(SubscribeToCalendarRequest) returns (SubscribeToCalendarResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "Any"
    };
  }
}
